# PhenoPlugins

./: .editorconfig  .pre-commit-config.yaml  ADR.md  AGENTS.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  PRD.md  README.md  SECURITY.md  SOTA.md  SPEC.md  Taskfile.yml  audit_scorecard.json  clippy.toml  deny.toml  justfile  worklog.md
.github/: CODEOWNERS
.github/workflows/: audit.yml  cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  deny.yml  doc-links.yml  fr-coverage.yml  legacy-tooling-gate.yml  quality-gate.yml  release-dry-run.yml  scorecard.yml  secrets-scan.yml  trufflehog.yml
crates/pheno-plugin-core/: Cargo.toml
crates/pheno-plugin-core/src/: capabilities.rs  error.rs  guardrails.rs  lib.rs  lifecycle.rs  manifest.rs  registry.rs  traits.rs
crates/pheno-plugin-core/tests/: catalog_test.rs  cross_module_integration.rs  hardening_integration.rs
crates/pheno-plugin-examples/: Cargo.toml
crates/pheno-plugin-examples/src/: lib.rs  manifest_demo.rs  memory_storage.rs  memory_vcs.rs
crates/pheno-plugin-git/: Cargo.toml
crates/pheno-plugin-git/src/: lib.rs
crates/pheno-plugin-git/tests/: git_integration.rs
crates/pheno-plugin-sqlite/: Cargo.toml
crates/pheno-plugin-sqlite/src/: error.rs  lib.rs
crates/pheno-plugin-sqlite/tests/: smoke_test.rs  sqlite_integration.rs
crates/pheno-plugin-vessel/: .env.example  AGENTS.md  ARCHIVED.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  clippy.toml  deny.toml  gitleaks.toml  tarpaulin-report.json  worklog.md
crates/pheno-plugin-vessel/.agileplus/specs/functional-requirements/: fr_001.yaml
crates/pheno-plugin-vessel/.github/workflows/: ci.yml  coverage.yml  quality-gate.yml  release.yml  sast.yml  security-deep-scan.yml  security-guard.yml  security.yml
crates/pheno-plugin-vessel/benches/: perf.rs
crates/pheno-plugin-vessel/docs/: journeys.md
crates/pheno-plugin-vessel/docs/journeys/: index.md
crates/pheno-plugin-vessel/docs/stories/: index.md
crates/pheno-plugin-vessel/docs/traceability/: index.md
crates/pheno-plugin-vessel/fuzz/: Cargo.toml
crates/pheno-plugin-vessel/phenotype-vessel/coverage/: tarpaulin-report.html
crates/pheno-plugin-vessel/src/: client.rs  compose.rs  container.rs  image.rs  lib.rs  runtime.rs
crates/pheno-plugin-vessel/tests/: composition_integration.rs  cross_module_integration.rs  integration.rs
crates/pheno-plugin-vessel/tests/bdd/: steps.rs
crates/pheno-plugin-vessel/tests/bdd/features/: test.feature
docs/: FUNCTIONAL_REQUIREMENTS.md  OKR.md  PLUGIN_MANIFEST_SPEC.md  index.md
docs/adr/: ADR-001-trait-based-architecture.md  ADR-001.md  ADR-002-async-first-interface.md  ADR-002.md  ADR-003-in-process-loading.md  ADR-003.md  ADR-004.md  ADR-005.md  README.md
docs/boundary/: PhenoPlugins.md
docs/history/phenoVessel/: README.md  index.yaml  traceability-matrix.yaml
docs/history/phenoVessel/001-vessel-core/: SPEC.md  meta.json  tasks.md
docs/history/phenoVessel/architecture-decisions/: adr_001.yaml
docs/history/phenoVessel/user-stories/: us_001.yaml
docs/intent/: PhenoPlugins.md
docs/journeys/manifests/: README.md  catalog.json  error-codes.json  git.manifest.json  plugin-registration.json  sqlite.manifest.json
docs/security/: THREAT_MODEL.md
docs/worklogs/: README.md
ports/: Cargo.toml
ports/src/: lib.rs  plugin_loader.rs
ports/src/adapters/: mod.rs  native.rs  wasm.rs
ports/tests/: plugin_loader.rs
