[workspace]
resolver = "2"
members = [
    "crates/pheno-plugin-core",
    "crates/pheno-plugin-git",
    "crates/pheno-plugin-sqlite",
    "crates/pheno-plugin-vessel",
    "crates/pheno-plugin-examples",
]
# Note: crates/pheno-plugin-vessel/fuzz is a sub-crate (libfuzzer harness)
# that is NOT a workspace member; it is built only via `cargo fuzz`.

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/PhenoPlugins"
description = "PhenoPlugins - reference and shared plugins for the Phenotype plugin SDK"
authors = ["kooshapari"]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
# Plugin-specific
git2 = "0.21"
rusqlite = { version = "0.40", features = ["bundled"] }
# Workspace-internal paths
pheno-plugin-core = { path = "crates/pheno-plugin-core" }
