[package]
name = "pheno-plugin-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/PhenoPlugins"
authors = ["kooshapari"]
description = "pheno plugin core — Phenotype infrastructure crate (PhenoPlugins)"
documentation = "https://docs.rs/pheno-plugin-core"
keywords = ["phenotype", "pheno-plugins", "core"]
categories = ["data-structures", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
