[package]
name = "pheno-plugin-examples"
version = "0.1.0"
edition = "2021"
description = "Reference plugin implementations that demonstrate the PhenoPlugins SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/PhenoPlugins"
documentation = "https://docs.rs/pheno-plugin-examples"
keywords = ["phenotype", "pheno-plugins", "plugin"]
categories = ["development-tools"]
authors = ["kooshapari"]

[dependencies]
pheno-plugin-core = { path = "../pheno-plugin-core" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
