[package]
name = "pheno-plugin-git"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/PhenoPlugins"
authors = ["kooshapari"]
description = "pheno plugin git — Phenotype infrastructure crate (PhenoPlugins)"
documentation = "https://docs.rs/pheno-plugin-git"
keywords = ["phenotype", "pheno-plugins", "git"]
categories = ["development-tools::version-control", "development-tools"]

[dependencies]
pheno-plugin-core = { path = "../pheno-plugin-core" }
git2 = "0.21"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tempfile = "3"

[dev-dependencies]
tokio-test = "0.4"
