[package]
name = "pheno-plugin-sqlite"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/PhenoPlugins"
description = "pheno plugin sqlite — Phenotype infrastructure crate (PhenoPlugins)"
documentation = "https://docs.rs/pheno-plugin-sqlite"
keywords = ["phenotype", "pheno-plugins", "sql"]
categories = ["database", "development-tools"]
authors = ["kooshapari"]

[dependencies]
pheno-plugin-core = { path = "../pheno-plugin-core" }
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2.0"
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
