[package]
name = "phenotype-vessel"
version = "0.1.0"
edition = "2021"
description = "Container utilities"
license = "MIT"
repository = "https://github.com/phenotype-dev/phenotype-vessel"


[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
phenotype-test-support = { path = "../../../phenoShared/crates/phenotype-test-support" }
serde_json = "1.0"

[[bench]]
name = "perf"
harness = false
