[package]
name = "phenotype-vessel"
version = "0.1.0"
edition = "2021"
description = "Container utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/PhenoPlugins"
authors = ["kooshapari"]
documentation = "https://docs.rs/phenotype-vessel"
keywords = ["phenotype", "pheno-plugins", "vessel"]
categories = ["filesystem"]


[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
phenotype-test-support = { path = "../../../phenoShared/crates/phenotype-test-support" }

[[bench]]
name = "perf"
harness = false
