[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/PhenoPlugins"
authors = ["kooshapari"]
description = "fuzz — Phenotype infrastructure crate (PhenoPlugins)"
documentation = "https://docs.rs/fuzz"
keywords = ["phenotype", "pheno-plugins"]
categories = ["development-tools"]
[dependencies]
libfuzzer-sys = "0.4"
